# GDPR_cookies_extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  analysis_results_2025-09-26_13-02-43.csv  analysis_results_2025-10-09_10-02-16.csv  analysis_results_2025-10-12_13-54-54.json  config.json  entrypoint.sh  extractor.py  extractor_playwright.py  pyproject.toml  sites.csv
src/gdpr_cookies_extractor/: extractor_playwright.py  main.py
src/gdpr_cookies_extractor/analysis/: llm_api.py  llm_interface.py  models.py  ollama_providers.py  privacy_analyzers.py  scraper.py
src/gdpr_cookies_extractor/utils/: cookie_helpers.py  html_cleaner.py  logging_setup.py  sitemap_parser.py
